# Job-Description-Architect

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  repair_project.py  requirements.txt
core/: __init__.py  constants.py  enhance.py  io.py  schema.py  validate.py
tests/: test_app.py
